feat: layout slots

--- a/docs/pb_hooks/pages/(main)/+layout.ejs
+++ b/docs/pb_hooks/pages/(main)/+layout.ejs
@@ -32,7 +32,7 @@
         </ul>
       </div>
     </div>
-    <%- slot %>
+    <%- slots.body || slot %>
   </div>
   <div class="drawer-side">
     <label
