--- a/docs/pb_hooks/pages/(main)/docs/+layout.ejs
+++ b/docs/pb_hooks/pages/(main)/docs/+layout.ejs
@@ -7,7 +7,7 @@
     >
       Table of Contents
     </label>
-    <article class="prose"><%- slot %></article>
+    <article class="prose"><%- slots.body || slot %></article>
 
     <!-- Page content here -->
   </div>
