--- a/starters/htmx/pb_hooks/pages/+layout.ejs
+++ b/starters/htmx/pb_hooks/pages/+layout.ejs
@@ -34,6 +34,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/htmx/2.0.3/htmx.min.js"
+      integrity="sha512-dQu3OKLMpRu85mW24LA1CUZG67BgLPR8Px3mcxmpdyijgl1UpCM1RtJoQP6h8UkufSnaHVRTUx98EQT9fcKohw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script>
       const client = new PocketBase(`https://pocketcraft.dev`)
     </script>
