--- a/starters/mvp/pb_hooks/pages/index.ejs
+++ b/starters/mvp/pb_hooks/pages/index.ejs
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>My MVP Page</title>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/mvp.css/1.16.0/mvp.min.css"
+      integrity="sha512-jpAA/iIi8VCSS32SIiI0/PV7KULveoqtZirvKdjcbAbwRGuxPbM8UG9gHd3l8T6flbx6F6mdmWKmCVvYg51kKQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <main>
