enh: require and include overhaul

--- a/docs/pb_hooks/pages/+layout.ejs
+++ b/docs/pb_hooks/pages/+layout.ejs
@@ -38,7 +38,7 @@
           <span class="text-sm/none font-medium"
             >Enjoy PocketPages? Give it a star on GitHub 🎉</span
           >
-          <%- include(`/_include/version.ejs`) %>
+          <%- include(`version.ejs`) %>
         </a>
       </div>
     </section>
