--- a/docs/pb_hooks/pages/(splash)/index.ejs
+++ b/docs/pb_hooks/pages/(splash)/index.ejs
@@ -22,7 +22,7 @@
 
       <div class="bg-neutral-300 mt-20 p-10 rounded-md mt-4">
         <div class="text-2xl font-bold">Quickstart</div>
-        <%- include(`../_include/quickstart.ejs`) %>
+        <%- include(`quickstart.ejs`) %>
         <div
           class="text-left items-center flex flex-col w-full max-w-[320px] sm:max-w-full"
         >
