fix: starter kits

--- a/starters/htmx/pb_hooks/pages/+layout.ejs
+++ b/starters/htmx/pb_hooks/pages/+layout.ejs
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:url"
-      content="<%=meta('path') ? `https://pocketcraft.dev${meta('path')}` : meta('url') || `https://pocketcraft.dev${ctx.request().url}`%>"
+      content="<%=meta('path') ? `https://pocketcraft.dev${meta('path')}` : meta('url') || `https://pocketcraft.dev${request.url}`%>"
     />
     <link
       rel="stylesheet"
