--- a/docs/pb_hooks/pages/+layout.ejs
+++ b/docs/pb_hooks/pages/+layout.ejs
@@ -29,17 +29,14 @@
   <body>
     <section class="-mt-px border-y border-gray-200 bg-gray-100">
       <div class="mx-auto max-w-screen-xl px-4 py-2">
-        <a
-          href="https://github.com/benallfree/pocketpages"
-          rel="noreferrer"
-          target="_blank"
-          class="no-underline flex flex-col sm:flex-row items-center justify-center gap-1.5 transition hover:opacity-75"
+        <div
+          class="flex flex-col sm:flex-row items-center justify-center gap-1.5"
         >
           <span class="text-sm/none font-medium"
             >Enjoy PocketPages? Give it a star on GitHub 🎉</span
           >
           <%- include(`/_include/version.ejs`) %>
-        </a>
+        </div>
       </div>
     </section>
     <%- slots.body || slot%>
