--- a/docs/pb_hooks/pages/(main)/docs/+layout.ejs
+++ b/docs/pb_hooks/pages/(main)/docs/+layout.ejs
@@ -18,7 +18,7 @@
       class="drawer-overlay"
     ></label>
     <ul class="menu bg-base-200 text-base-content min-h-full w-64 p-4 m-0 toc">
-      <article class="prose"><%- include(`toc.md`) %></article>
+      <article class="prose"><%- include(`_private/toc.md`) %></article>
     </ul>
   </div>
 </div>
