--- a/docs/pb_hooks/pages/(main)/+layout.ejs
+++ b/docs/pb_hooks/pages/(main)/+layout.ejs
@@ -4,23 +4,9 @@
     <!-- Navbar -->
     <div class="navbar bg-base-300 w-full">
       <div class="flex-none lg:hidden">
-        <label
-          for="my-drawer-3"
-          aria-label="open sidebar"
-          class="btn btn-square btn-ghost"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            class="inline-block h-6 w-6 stroke-current"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M4 6h16M4 12h16M4 18h16"
-            ></path>
+        <label for="my-drawer-3" aria-label="open sidebar" class="btn btn-square btn-ghost">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-6 w-6 stroke-current">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </label>
       </div>
@@ -29,17 +15,14 @@
         <ul class="menu menu-horizontal">
           <!-- Navbar menu content here -->
           <li><a href="/docs">Docs</a></li>
+          <li><a href="/docs-next">Docs@next</a></li>
         </ul>
       </div>
     </div>
     <%- slots.body || slot %>
   </div>
   <div class="drawer-side">
-    <label
-      for="my-drawer-3"
-      aria-label="close sidebar"
-      class="drawer-overlay"
-    ></label>
+    <label for="my-drawer-3" aria-label="close sidebar" class="drawer-overlay"></label>
     <ul class="menu bg-base-200 min-h-full w-80 p-4">
       <!-- Sidebar content here -->
       <li><a href="/docs">Docs</a></li>
